# shadowsocks-vray-playbooks

./: .gitignore  Makefile  README.eng.md  README.md  pyproject.toml  requirements.txt  variables.example.yml  variables.yml
deploy/: client.yml  server.yml  setup.yml
deploy/roles/client/tasks/: main.yml  ssh.yml
deploy/roles/client/templates/: config.j2  shadowsocks-libev.j2
deploy/roles/server/files/docker/: certbot.conf  docker-compose.yml  nginx.conf  nginx_config.conf
deploy/roles/server/files/docker/certbot/: Dockerfile  start.sh
deploy/roles/server/files/docker/nginx/: Dockerfile
deploy/roles/server/tasks/: certbot.yml  main.yml  nginx.yml  prepare.yml  shadowsocks.yml
deploy/roles/server/templates/: cron-task.j2  env.j2  nginx-certgen.j2  nginx-release.j2  nginx.j2  shadowsocks-config.j2
deploy/roles/setup/tasks/: docker.yml  main.yml  network.yml  packages.yml
docs/: azure.md
inventories/: host.example.ini  hosts.ini
ss-qrcode/: ss-qrcode.py
