[tool.poetry]
name = "ansible-deployment"
version = "0.1.0"
description = ""
authors = ["Gorill <kirill.ivanov96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
